<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/overlay_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/overlay_omnibusiness_logo"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="-64dp"
        android:contentDescription="@string/omnipay_business_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overlay_text_please_wait"
        android:paddingHorizontal="32dp"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overlay_text_warning"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:paddingHorizontal="32dp"
        android:layout_marginBottom="16dp"/>
</LinearLayout>